fixing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -224,22 +224,36 @@ span {
   position: absolute;
   top: 50%;
   left: 50%;
-  width:calc(100vh - 50%);
+  width:calc(100vh - 40%);
   transform: translate(-50%, -50%);
 }
+
+
 @media (max-width: 768px) {
   .centered {
   position: absolute;
   top: 50%;
   left: 50%;
-  width:calc(100vh - 75%);
+  width:calc(100vh - 70%);
   transform: translate(-50%, -50%);
+}
+
+@media (max-width: 768px) {
+  #container img{
+    width:calc(100hh);
+  }
+}
+
+@media (max-width: 480px) {
+  #container img{
+    width:calc(100hh);
+  }
 }
 
 }
 .boardtext {
   margin: 0 0 10% 0;
-  font-size: 40px;
+  font-size: 48px;
   font-weight: 700;
   line-height: 56px;
   font-family: "Philosopher", sans-serif;
@@ -248,10 +262,9 @@ span {
 @media (max-width: 768px) {
   .boardtext {
     margin: 0 0 7% 0;
-    font-size: 30px;
-
+    font-size: 48px;
     font-weight: 700;
-    line-height: 30px;
+    line-height: 56px;
     font-family: "Philosopher", sans-serif;
     color: white;
   }
